--- a/todo-app-backend/package.json
+++ b/todo-app-backend/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
-    "typescript": "^4.5.5"
+    "mongodb": "^4.3.1",
+    "mongoose": "^6.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^17.0.18",
     "jest": "^27.5.0",
-    "ts-jest": "^27.1.3"
+    "mongodb-memory-server": "^8.3.0",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
