--- a/todo-app-backend-service.yaml
+++ b/todo-app-backend-service.yaml
@@ -13,10 +13,11 @@ spec:
     - name: "3001"
       port: 3001
       targetPort: 3001
-    - name: 3001-tcp
-      port: 3001
-      targetPort: 3001
+    # - name: 3001-tcp
+    #   port: 3001
+    #   targetPort: 3001
   selector:
     io.kompose.service: todo-app-backend
-status:
-  loadBalancer: {}
+  type: LoadBalancer
+# status:
+#   loadBalancer: {}
